; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_sb_ess.c_ess_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_sb_ess.c_ess_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8)* @ess_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ess_read(i32* %0, i8 zeroext %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8, align 1
  store i32* %0, i32** %4, align 8
  store i8 %1, i8* %5, align 1
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @sb_dsp_command(i32* %6, i8 zeroext -64)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %19

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = load i8, i8* %5, align 1
  %13 = call i32 @sb_dsp_command(i32* %11, i8 zeroext %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %10
  store i32 -1, i32* %3, align 4
  br label %19

16:                                               ; preds = %10
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @sb_dsp_get_byte(i32* %17)
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %16, %15, %9
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @sb_dsp_command(i32*, i8 zeroext) #1

declare dso_local i32 @sb_dsp_get_byte(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
